# lokinet-control-panel

./: .drone.jsonnet  .gitignore  .gitmodules  CMakeLists.txt  README.md  TestPanel.qml  build-win32-deps.sh  lokicp.pro  lokinet-gui.pro  main.cpp  main.qml  mingw32.cmake  qml.qrc  resources.qrc
cmake/: StaticBuild.cmake
contrib/: build-win32-deps.sh
contrib/ci/: drone-static-upload.sh
debian/: changelog  ci-upload.sh  control  copyright  install  lokinet-gui.desktop  make-icons.sh  rules
res/: resources.qrc
res/images/: banner.xcf  connected_indicator.xcf  connection_button.xcf  connection_indicator_outline.xcf  disconnected_indicator.xcf  icon.icns  up_chevron.xcf
res/qml/: AddressPanel.qml  BootstrapDownloadDialog.qml  ConnectionButtonPanel.qml  ConnectionHeaderPanel.qml  ControlPanel.qml  DismissPanel.qml  ExitPanel.qml  LogoHeaderPanel.qml  RouteStatsPanel.qml  Style.qml  UptimePanel.qml  UsagePanel.qml  VersionPanel.qml  about.qml  main.qml  qmldir
src/: ApiPoller.cpp  ApiPoller.hpp  BandwidthChartData.cpp  BandwidthChartData.hpp  HttpClient.cpp  HttpClient.hpp  LokinetApiClient.cpp  LokinetApiClient.hpp  PlatformDetails.cpp  PlatformDetails.hpp  QmlClipboardAdapter.cpp  QmlClipboardAdapter.hpp  StatFetcher.cpp  StatFetcher.hpp  app.xml  lmq_settings.hpp  main.cpp  version.rc
src/process/: LinuxLokinetProcessManager.cpp  LinuxLokinetProcessManager.hpp  LokinetProcessManager.cpp  LokinetProcessManager.hpp  MacOSLokinetProcessManager.cpp  MacOSLokinetProcessManager.hpp  SystemdLokinetProcessManager.cpp  SystemdLokinetProcessManager.hpp  WindowsLokinetProcessManager.cpp  WindowsLokinetProcessManager.hpp
tools/: lokinet-gui-entitlements.plist  mk-icns.sh
